[package]
name = "cargo-bot"
version = "0.1.0"
edition = "2024"
default-run = "cargo-bot"

[[bin]]
name = "cargo-bot"
path = "src/bin/main.rs"

[dependencies]
dotenv = "0.15.0"
playground-api = { path = "../playground-api/", features = ["poise-bot"] }
poise = "0.6.1"
regex = "1.11.1"
strum = { version = "0.27.1", features = ["derive"] }
tokio = { version = "1.45.0", features = ["full"] }
redis = { version = "0.31", features = ["tokio-comp"] }
serde = { version = "1", features = ["rc", "derive"] }
serde_json = "1"
bincode = { version = "2.0", features = ["serde"] }