[package]
name = "corro"
version = "0.1.0"
edition = "2024"
default-run = "corro"

[[bin]]
name = "corro"
path = "src/bin/main.rs"

[dependencies]
dotenv = "0.15.0"
playground-api = { path = "../playground-api/", features = ["poise-bot"] }
poise = "0.6.1"
regex = "1.11.1"
strum = { version = "0.27.1", features = ["derive"] }
tokio = { version = "1.45.0", features = ["full"] }
redis = { version = "0.31", features = ["tokio-comp"] }
serde = { version = "1", features = ["rc", "derive"] }
serde_json = "1"
crates_io_api = { git = "https://github.com/kingananas20/crates-io-api" }
chrono = { version = "0.4.41", features = ["serde"] }
thousands = "0.2.0"
thiserror = "2.0.12"
once_cell = "1.21.3"
